@@ -4853,6 +4853,11 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   <li>Simplified interface for export/import</li>
 </ul></li>
 
+<li>Ninad Pundalik (Google Summer of Code 2010)
+<ul>
+  <li>AJAXifying the interface</li>
+</ul></li>
+
 <li>Barrie Leslie
 <ul>
   <li>BLOBstreaming support with PBMS PHP extension</li>
